# tsap_mcp_server

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  create_project_structure.sh  docker-compose.yml  install_dependencies.sh  pyproject.toml  test_document_profile.py  test_mcp_import.py  test_tools.py
examples/: advanced_awk_demo.py  advanced_document_profiler_demo.py  advanced_html_processor_demo.py  advanced_jq_demo.py  advanced_patterns_demo.py  advanced_pdf_extractor_demo.py  advanced_ripgrep_demo.py  advanced_semantic_search_demo.py  advanced_sqlite_demo.py  advanced_structure_search_demo.py  advanced_table_processor_demo.py  api_client.py  code_security_audit.py  debug_server.py  document_dna_profiling.py  evolving_search.py  incremental_processing.py  llm_pattern_evolution.py  log_pattern_evolution.py  mcp_client_example.py  output_of_complete_battery_of_demos.txt  performance_modes.py  plugin_development.py  run_complete_battery_of_demonstration_scripts.py  search_documents.py  semantic_search_demo.py  simple_mcp_search.py  simple_structure_search_test.py  standalone_mcp_server.py  test_llm_patterns.py  test_mcp_handler.py  test_toolapi_handler.py
examples/data/: documents.db  example.db
examples/tsap_example_data/code/: sample_config.yaml  sample_log.txt  sample_python.py
examples/tsap_example_data/structure/: sample_html.html
mcp_examples/: advanced_awk_demo.py  advanced_document_profiler_demo.py  advanced_html_processor_demo.py  advanced_jq_demo.py  advanced_patterns_demo.py  advanced_pdf_extractor_demo.py  advanced_ripgrep_demo.py  advanced_sqlite_demo.py  advanced_structure_search_demo.py  advanced_table_processor_demo.py  code_security_audit.py  debug_tools.py  document_dna_profiling.py  evolving_search.py  incremental_processing.py  llm_pattern_evolution.py  log_pattern_evolution.py  mcp_proxy.py  mcp_stdio_server.py  performance_modes.py  plugin_development.py  project_profiles.py  regulatory_changes.py  run_mcp_test.py  search_documents.py  semantic_search_demo.py  simple_mcp_test.py  simple_structure_search_test.py  test_llm_patterns.py  test_stdio_server.py  verify_tool_call.py
mcp_examples/data/: documents.db  example.db
src/scripts/: add_mcp_dependency.py  check_mcp_completeness.py  run_dual_servers.py  run_mcp_server.py  run_parallel.py
src/tsap/: __init__.py  __main__.py  cli.py  config.py  constants.py  dependencies.py  main.py  performance_mode.py  server.py  toolapi_integration.py  toolapi_mount.py  version.py
src/tsap/analysis/: __init__.py  base.py  cartographer.py  code.py  counterfactual.py  documents.py  llm.py  metadata.py  resource_allocator.py  strategy_compiler.py
src/tsap/api/: __init__.py  app.py  dependencies.py
src/tsap/api/middleware/: __init__.py  auth.py  error.py  logging.py
src/tsap/api/models/: __init__.py  analysis.py  auth.py  composite.py  core.py  evolution.py  plugins.py
src/tsap/api/routes/: __init__.py  analysis.py  composite.py  core.py  evolution.py  plugins.py
src/tsap/cache/: __init__.py  invalidation.py  manager.py  metrics.py  persistence.py
src/tsap/composite/: __init__.py  base.py  bootstrap_patterns.py  confidence.py  context.py  diff_generator.py  document_profiler.py  filenames.py  parallel.py  patterns.py  refinement.py  regex_generator.py  semantic_search.py  structure.py  structure_search.py
src/tsap/core/: __init__.py  awk.py  base.py  html_processor.py  jq.py  pdf_extractor.py  process.py  ripgrep.py  semantic_search_tool.py  sqlite.py  table_processor.py  validation.py
src/tsap/evolution/: __init__.py  base.py  genetic.py  metrics.py  offline_learning.py  pattern_analyzer.py  pattern_library.py  runtime_learning.py  strategy_evolution.py  strategy_journal.py
src/tsap/incremental/: __init__.py  aggregator.py  processor.py  splitter.py  streamer.py
src/tsap/mcp/: __init__.py  handler.py  models.py  protocol.py
src/tsap/mcp/client/: __init__.py  base.py
src/tsap/output/: __init__.py  csv_output.py  formatter.py  json_output.py  reporting.py  terminal.py  visualization.py
src/tsap/plugins/: __init__.py  interface.py  loader.py  manager.py  registry.py
src/tsap/project/: __init__.py  context.py  history.py  profile.py  transfer.py
src/tsap/storage/: __init__.py  database.py  history_store.py  pattern_store.py  profile_store.py  strategy_store.py
src/tsap/templates/: __init__.py  base.py  corpus_exploration.py  custom.py  registry.py  regulatory_analysis.py  security_audit.py
src/tsap/toolapi/: __init__.py  handler.py  models.py  protocol.py
src/tsap/utils/: __init__.py  async_utils.py  caching.py  errors.py  filesystem.py  helpers.py  metrics.py  optimization.py  security.py
src/tsap_mcp/: __init__.py  __main__.py  adapter.py  cli.py  lifespan.py  server.py  tool_map.py
src/tsap_mcp/adapters/: __init__.py  tool_adapters.py
src/tsap_mcp/prompts/: __init__.py  code_analysis.py  composite.py  processing.py  search.py  visualization.py
src/tsap_mcp/resources/: __init__.py  analysis.py  composite.py  config.py  files.py  processing.py  project.py  search.py  semantic.py  visualization.py
src/tsap_mcp/tools/: __init__.py  analysis.py  composite.py  processing.py  search.py  visualization.py
src/tsap_mcp/utils/: __init__.py  analysis.py  composite.py  context.py  processing.py  search.py  visualization.py
tests/test_mcp/: test_integration.py  test_prompts.py  test_protocol.py  test_resources.py  test_server.py  test_tools.py
tsap_example_data/code/: llm_tournament.py  main.py  sample_config.yaml  sample_log.txt  sample_python.py  utils.py
tsap_example_data/documents/: browser_use_docs.md  code_sample.py  logs.jsonl  nested_data.json  report_east.csv  report_south.csv  report_v1.txt  report_v2.txt  report_west.csv  strategic_thinking.txt  technical_specification.md  users.json
tsap_example_data/html/: 10q_filing.html  Algebraic_topology_Wikipedia.html
tsap_example_data/structure/: sample_code.py  sample_html.html  sample_markdown.md
tsap_example_data/tables/: inventory.csv  orders.tsv  products.csv  sales_data.csv  sensor_data.json
(+19 files in other folders)
